Did some change 1.0

--- a/public/alumni/alumni.html
+++ b/public/alumni/alumni.html
@@ -96,7 +96,7 @@
       <div
         class="text-[0.50rem] pl-2 sm:text-base w-[30rem] lg:w-[33rem] ml-2 sm:ml-3 leading-5 text-[#0054A6]  cursor-pointer font-bold">
         <a href="/alumni/alumni.html">
-          <div>Student Alumni Relation Cell (SARC)</div>Dr. B R Ambedkar National Institute of Technology Jalandhar
+          <div>NITJ Alumni Association (NITJAA)</div>Dr. B R Ambedkar National Institute of Technology Jalandhar
         </a>
       </div>
 
@@ -112,10 +112,26 @@
       <li class="m-1 lg:mr-4 xl:m-4 my-3 lg:my-0">
         <a href="/index.html" target="_blank"
           class=" text-[0.5rem] sm:text-xs xl:text-base w-auto text-black hover:text-[#D3D3D3] duration-500 ">
-          <span class="text-[#0054A6] hover:text-[#D3D3D3]"><i class="fa-solid fa-house"></i></span> NITJ
+          <span class="text-[#0054A6] hover:text-[#D3D3D3]"><i class="fa-solid fa-house"></i></span>
         </a>
       </li>
-
+      <li class="m-1 lg:mr-4 xl:m-4 my-3 lg:my-0">
+        <a href="givingback.html" target="_blank"
+          class="text-[0.5rem] sm:text-xs xl:text-base w-auto text-black hover:text-[#D3D3D3] duration-500 ">ABOUT</a>
+      </li>
+      <li class="m-1 lg:mr-4 xl:m-4 my-3 lg:my-0">
+        <a href="givingback.html" target="_blank"
+          class="text-[0.5rem] sm:text-xs xl:text-base w-auto text-black hover:text-[#D3D3D3] duration-500 ">NEWSLETTER</a>
+      </li>
+      <li class="m-1 lg:mr-4 xl:m-4 my-3 lg:my-0">
+        <a href="givingback.html" target="_blank"
+          class="text-[0.5rem] sm:text-xs xl:text-base w-auto text-black hover:text-[#D3D3D3] duration-500 ">EVENTS</a>
+      </li>
+      <li class="m-1 lg:mr-4 xl:m-4 my-3 lg:my-0">
+        <a href="givingback.html" target="_blank"
+          class="text-[0.5rem] sm:text-xs xl:text-base w-auto text-black hover:text-[#D3D3D3] duration-500 ">OFFICE
+          BEARERS</a>
+      </li>
       <li class="m-1 lg:mr-4 xl:m-4 my-3 lg:my-0">
         <a href="givingback.html" target="_blank"
           class="text-[0.5rem] sm:text-xs xl:text-base w-auto text-black hover:text-[#D3D3D3] duration-500 ">GIVING
@@ -124,7 +140,7 @@
       <li class="m-1 lg:mr-4 xl:m-4 my-3 lg:my-0">
         <a href="/alumni/alumni.html#chapters"
           class="text-[0.5rem] sm:text-xs xl:text-base w-auto text-black hover:text-[#D3D3D3] duration-500 ">
-          CHAPTERS</a>
+          CONTACT US</a>
       </li>
 
       <a href="https://nitj.ac.in/alumni_fundraising/login" target="_blank">
@@ -142,13 +158,14 @@
 
 
   <div class="relative max-w-screen flex items-center justify-center h-screen mb-12 overflow-hidden">
-
+    <!-- <p>Support by Sarthak Sharma</p> -->
     <div class="relative z-30 p-5 text-white bg-opacity-50 rounded-xl flex-none">
-      <div class="text-xl md:text-4xl lg:text-5xl font-semibold italic animate-pulse md:py-2">
+      <!-- <div class="text-xl md:text-4xl lg:text-5xl font-semibold italic animate-pulse md:py-2">
         Welcome Home!
-      </div>
-      <div class="text-base md:text-2xl lg:text-3xl font-normal ">
-        Connect with your Alma Mater.
+      </div> -->
+      <div class="text-base md:text-4xl lg:text-5xl font-semibold italic ">
+        Your alma mater needs your support<br>
+        It&apos;s now time to give back
       </div>
     </div>
     <video autoplay loop muted class="fixed -z-10 w-auto min-w-full min-h-full max-w-none "
@@ -166,20 +183,20 @@
 
     <h2
       class="grid justify-center items-center grid-cols-1 font-bold text-sm sm:text-base md:text-lg lg:text-2xl my-3 sm:my-5 text-black text-center font-sans">
-      STUDENT ALUMNI RELATIONS CELL (SARC NITJ)</h2>
+      NITJ ALUMNI ASSOCIATION (NITJAA)</h2>
 
 
 
     <p
       class="justify-center font-normal font-[Poppins] text-[0.5rem] sm:text-xs md:text-base lg:text-xl text-center tracking-wide leading-loose text-[#000000B2] mt-5 my-7 md:my-9 lg:my-19">
       <i class="fa-sharp fa-solid fa-quote-left text-xl sm:text-4xl lg:text-6xl text-[#FEB7028C] mx-3"></i>
-      SARC provides platform for students to interact with well settled alumni's of NITJ. It aids in gaining career
+      NITJAA provides platform for students to interact with well settled alumni's of NITJ. It aids in gaining career
       advice and gives them direction towards better future by organising annual alumni meet. It renders students with
       career guidance and tailoring them for their future endeavours. Catering to the betterment of alumni-student
       relationship of Institute. To furnish alumni with a platform to interact with the students on a one to one basis
       and connect them with the Institute and provide career advice to prepare for the real world.
     </p>
-
+    <!-- 
     <hr
       class="justify-center border-[3px] sm:border-[0.25rem] lg:border-[0.5rem] w-full border-[#FFD66E] md:border-[#277BC7] border-solid border-t-0 border-x-0 lg:border-t-0 lg:border-x-0 rounded my-6 mt-16 hidden md:block">
 
@@ -204,7 +221,7 @@
           <h1 class="text-[#82C3FF] text-[0.3rem] sm:text-xs lg:text-sm my-1 lg:my-2">ALUMNI MEET</h1>
         </div>
       </div>
-    </div>
+    </div> -->
 
 
 
@@ -231,7 +248,7 @@
 
     <!-- Around the world -->
 
-    <section id="chapters"
+    <!-- <section id="chapters"
       class="scroll-mt-32 mb-20 h-[45vh] sm:h-[50vh] lg:h-[90vh] group bg-cover bg-fixed bg-center bg-no-repeat"
       style="background-image:url('https://static.almabaseapp.com/img/map_without_labels.c474a674d948.png');">
 
@@ -347,7 +364,7 @@
 
         </div>
       </div>
-    </section>
+    </section> -->
 
 
 
@@ -893,7 +910,7 @@
             alt="logo">
         </a>&nbsp;&nbsp;
         <p class="grid items-center font-semibold text-white lg:text-[20px] hover:text-[#82C3FF]">
-          <a href="/alumni/alumni.html" target="_blank">Student Alumni Relation Cell (SARC), NIT Jalandhar</a>
+          <a href="/alumni/alumni.html" target="_blank">NITJ Alumni Association (NITJAA)</a>
         </p>
       </div>
 
