Updated alumni, awards, giving back

--- a/public/alumni/alumni.html
+++ b/public/alumni/alumni.html
@@ -116,29 +116,29 @@
         </a>
       </li>
       <li class="m-1 lg:mr-4 xl:m-4 my-3 lg:my-0">
-        <a href="givingback.html" target="_blank"
+        <a href="#" target="_blank"
           class="text-[0.5rem] sm:text-xs xl:text-base w-auto text-black hover:text-[#D3D3D3] duration-500 ">ABOUT</a>
       </li>
       <li class="m-1 lg:mr-4 xl:m-4 my-3 lg:my-0">
-        <a href="givingback.html" target="_blank"
+        <a href="#" target="_blank"
           class="text-[0.5rem] sm:text-xs xl:text-base w-auto text-black hover:text-[#D3D3D3] duration-500 ">NEWSLETTER</a>
       </li>
       <li class="m-1 lg:mr-4 xl:m-4 my-3 lg:my-0">
-        <a href="givingback.html" target="_blank"
+        <a href="awards.html" target="_blank"
           class="text-[0.5rem] sm:text-xs xl:text-base w-auto text-black hover:text-[#D3D3D3] duration-500 ">EVENTS</a>
       </li>
       <li class="m-1 lg:mr-4 xl:m-4 my-3 lg:my-0">
-        <a href="givingback.html" target="_blank"
+        <a href="#" target="_blank"
           class="text-[0.5rem] sm:text-xs xl:text-base w-auto text-black hover:text-[#D3D3D3] duration-500 ">OFFICE
           BEARERS</a>
       </li>
       <li class="m-1 lg:mr-4 xl:m-4 my-3 lg:my-0">
-        <a href="givingback.html" target="_blank"
+        <a href="givingback2.html" target="_blank"
           class="text-[0.5rem] sm:text-xs xl:text-base w-auto text-black hover:text-[#D3D3D3] duration-500 ">GIVING
           BACK</a>
       </li>
       <li class="m-1 lg:mr-4 xl:m-4 my-3 lg:my-0">
-        <a href="/alumni/alumni.html#chapters"
+        <a href="#"
           class="text-[0.5rem] sm:text-xs xl:text-base w-auto text-black hover:text-[#D3D3D3] duration-500 ">
           CONTACT US</a>
       </li>
@@ -178,7 +178,7 @@
 
 
   <!--Student alumini relation box starts-->
-  <div
+  <!-- <div
     class="grid bg-white py-4 sm:py-10 lg:py-16 px-5 sm:px-10 lg:px-[4.5rem] md:w-[68vw] max-w-screen md:rounded-xl mx-auto  h-[45vh] md:h-auto z-40 relative shadow-xl shadow-gray-700">
 
     <h2
@@ -196,7 +196,7 @@
       relationship of Institute. To furnish alumni with a platform to interact with the students on a one to one basis
       and connect them with the Institute and provide career advice to prepare for the real world.
     </p>
-    <!-- 
+    
     <hr
       class="justify-center border-[3px] sm:border-[0.25rem] lg:border-[0.5rem] w-full border-[#FFD66E] md:border-[#277BC7] border-solid border-t-0 border-x-0 lg:border-t-0 lg:border-x-0 rounded my-6 mt-16 hidden md:block">
 
@@ -221,10 +221,36 @@
           <h1 class="text-[#82C3FF] text-[0.3rem] sm:text-xs lg:text-sm my-1 lg:my-2">ALUMNI MEET</h1>
         </div>
       </div>
-    </div> -->
+    </div> 
 
 
 
+
+  </div> -->
+  <div
+    class="grid bg-white py-4 sm:py-10 lg:py-16 px-5 sm:px-10 lg:px-[4.5rem] md:w-[68vw] max-w-screen md:rounded-xl mx-auto  h-[45vh] md:h-auto z-40 relative shadow-xl shadow-gray-700">
+
+    <h2
+      class="grid justify-center items-center grid-cols-1 font-bold text-sm sm:text-base md:text-lg lg:text-2xl my-3 sm:my-5 text-black text-center font-sans">
+      NITJ ALUMNI ASSOCIATION (NITJAA)</h2>
+
+    <p
+      class="justify-center font-normal font-[Poppins] text-[0.5rem] sm:text-xs md:text-base lg:text-xl text-center tracking-wide leading-loose text-[#000000B2] mt-5 my-7 md:my-9 lg:my-19">
+      <i class="fa-sharp fa-solid fa-quote-left text-xl sm:text-4xl lg:text-6xl text-[#FEB7028C] mx-3"></i>
+      NITJAA provides platform for students to interact with well settled alumni's of NITJ. It aids in gaining career
+      advice and gives them direction towards better future by organising annual alumni meet. It renders students with
+      career guidance and tailoring them for their future endeavours. Catering to the betterment of alumni-student
+      relationship of Institute. To furnish alumni with a platform to interact with the students on a one to one basis
+      and connect them with the Institute and provide career advice to prepare for the real world.
+    </p>
+
+    <hr
+      class="justify-center border-[3px] sm:border-[0.25rem] lg:border-[0.5rem] w-full border-[#FFD66E] md:border-[#277BC7] border-solid border-t-0 border-x-0 lg:border-t-0 lg:border-x-0 rounded my-2 mt-1 hidden md:block">
+      <p
+      class="justify-center font-normal font-[Poppins] text-[0.5rem] sm:text-xs md:text-base lg:text-xl text-center tracking-wide leading-loose text-[#000000B2] mt-2 my-2 md:my-9 lg:my-19">
+      <i class="fa-sharp fa-solid fa-quote-left text-xl sm:text-4xl lg:text-6xl text-[#FEB7028C] mx-3"></i>
+      <b>Vision:</b> "To build a rich intellectual potential embedded with interdisciplinary knowledge, human values and professional ethics among the youth, aspirant of becoming engineers and technologists, so that they contribute to society and create a niche for a successful career".
+      <br><br><b>Mission:</b> "To become a leading and unique institution of higher learning, offering state-of-the- art education, research and training in engineering and technology to students who are able and eager to become change agents for the industrial and economic progress of the nation. To nurture and sustain an academic ambience conducive to the development and growth of committed professionals for sustainable development of the nation and to accomplish its integration into the global economy. To strive to be a Swachch NIT providing a guarantee of clean hostel, clean mess, clean water and hygienic & wholesome food to its students". </p>
 
   </div>
   <!--Student alumini relation box ends-->
