changed alumni portal

--- a/public/alumni/alumni.html
+++ b/public/alumni/alumni.html
@@ -125,7 +125,7 @@
       </li>
       <li class="m-1 lg:mr-4 xl:m-4 my-3 lg:my-0">
         <a href="awards.html" target="_blank"
-          class="text-[0.5rem] sm:text-xs xl:text-base w-auto text-black hover:text-[#D3D3D3] duration-500 ">EVENTS</a>
+          class="text-[0.5rem] sm:text-xs xl:text-base w-auto text-black hover:text-[#D3D3D3] duration-500 ">AWARDS</a>
       </li>
       <li class="m-1 lg:mr-4 xl:m-4 my-3 lg:my-0">
         <a href="https://drive.google.com/file/d/1UBH35j1YHkk51TrU0YnzjQU1YO_q10zq/view?usp=sharing" target="_blank"
@@ -932,7 +932,7 @@
   <div class="z-10">
     <div class=" bg-[#0054A6] text-white lg:flex-row px-5 pt-5 lg:px-20 h-full flex">
       <a href="/alumni/alumni.html" target="_blank" class="hover:text-[#82C3FF]">
-        <img class="h-[2.2rem] sm:h-[3.6rem] inline cursor-pointer " src="img/nitjaaimage.png" alt="logo">
+        <img class="h-[2.2rem] sm:h-[3.6rem] inline cursor-pointer " src="img/SARC_logo.png" alt="logo">
       </a>&nbsp;&nbsp;
       <p class="grid items-center font-semibold text-white lg:text-[20px] hover:text-[#82C3FF]">
         <a href="/alumni/alumni.html" target="_blank">NITJ Alumni Association (NITJAA)</a>
