--- a/public/alumni/awards.html
+++ b/public/alumni/awards.html
@@ -50,7 +50,7 @@
         </a>
       </li>
       <li class="m-1 lg:mr-4 xl:m-4 my-3 lg:my-0">
-        <a href="#" target="_blank"
+        <a href="./alumni.html#about_nitjaa" target="_blank"
           class="text-[0.5rem] sm:text-xs xl:text-base w-auto text-black hover:text-[#D3D3D3] duration-500 ">ABOUT</a>
       </li>
       <li class="m-1 lg:mr-4 xl:m-4 my-3 lg:my-0">
@@ -59,10 +59,10 @@
       </li>
       <li class="m-1 lg:mr-4 xl:m-4 my-3 lg:my-0">
         <a href="awards.html" target="_blank"
-          class="text-[0.5rem] sm:text-xs xl:text-base w-auto text-black hover:text-[#D3D3D3] duration-500 ">EVENTS</a>
+          class="text-[0.5rem] sm:text-xs xl:text-base w-auto text-black hover:text-[#D3D3D3] duration-500 ">AWARDS</a>
       </li>
       <li class="m-1 lg:mr-4 xl:m-4 my-3 lg:my-0">
-        <a href="#" target="_blank"
+        <a href="https://drive.google.com/file/d/1UBH35j1YHkk51TrU0YnzjQU1YO_q10zq/view?usp=sharing" target="_blank"
           class="text-[0.5rem] sm:text-xs xl:text-base w-auto text-black hover:text-[#D3D3D3] duration-500 ">OFFICE
           BEARERS</a>
       </li>
@@ -136,7 +136,7 @@
   </p>
    
   </div>
-
+  
 
 
 
